Everything at the moment

--- a/scratch/index.html
+++ b/scratch/index.html
@@ -9,7 +9,7 @@
 </head>
 <body x-ng-app="" x-ng-controller="TicTacToeCtrl">
 	<div class="container">
-		<div class="cells" x-ng-repeat="b in board track by $index" x-ng-click="clicker($index)"> {{ $index }} </div> 
+		<div class="cells" x-ng-repeat="b in board track by $index"> {{ $index }} </div> 
 	</div>
 	
 </body>
